--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         </div>
       </div>
     </div>
+    <div>
+      <a href="https://github.com/Haimrich9/My-Awsome-App">Open-source code</a>
+      by Henriette Egeberg Kristensen
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
