--- a/index.html
+++ b/index.html
@@ -41,18 +41,14 @@
       </div>
       <div class="current">
         <div>
-          <h1>oslo</h1>
-          <span class="emoji">☀️</span>
+          <h1>Oslo</h1>
+          <span class="emoji"></span>
           <span>
-            <span class="high-temp">
-              <span class="temp_max">10</span>
-              <span class="temp-symbol">℃</span>
-            </span>
-            <span class="temp_min">5</span>
-            <span class="temp-symbol">℃</span>
+            <span class="temp"></span>
+            <span class="temp-symbol">℃ | ℉</span>
           </span>
           <div>
-            <span class="pre">Precipitation: 77%</span>
+            <span class="pre">Humidity: 77%</span>
             <span class="wind">Wind: 4km/h</span>
           </div>
         </div>
