added new API and icons, removed emojis

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
       <div class="current">
         <div>
           <h1>Oslo</h1>
-          <span class="emoji"></span>
+          <img
+            alt="icon"
+            class="emoji"
+            id="icon"
+            src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-night.png"
+          />
           <span>
             <span class="temp"></span>
             <span class="temp-symbol">℃ | ℉</span>
@@ -100,7 +105,7 @@
         </div>
       </div>
     </div>
-    <div>
+    <div class="sign">
       <a href="https://github.com/Haimrich9/My-Awsome-App">Open-source code</a>
       by Henriette Egeberg Kristensen
     </div>
