--- a/index.html
+++ b/index.html
@@ -1,114 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="src/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Courgette&display=swap"
-      rel="stylesheet"
-    />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-  </head>
-  <body>
-    <div class="main">
-      <div class="input-group mb-3 search-bar">
-        <input
-          type="search"
-          class="form-control"
-          name=""
-          id="inputCity"
-          placeholder="Enter City"
-        />
-        <button
-          class="btn btn-outline-secondary search-bar-button"
-          type="button"
-          id="button-addon2"
-        >
-          Search
-        </button>
-      </div>
-      <div class="current">
-        <div>
-          <h1>Oslo</h1>
-          <img
-            alt="icon"
-            class="emoji"
-            id="icon"
-            src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-night.png"
-          />
-          <span>
-            <span class="temp"></span>
-            <span class="temp-symbol">℃ | ℉</span>
-          </span>
-          <div>
-            <span class="pre">Humidity: 77%</span>
-            <span class="wind">Wind: 4km/h</span>
-          </div>
-        </div>
-        <div class="current-time-style">
-          <button class="temp-convert-btn">Convert</button>
-          <div class="current-time"></div>
-        </div>
-      </div>
-      <div class="future">
-        <div class="future-day">
-          <div class="day-name">Monday</div>
-          <div class="emoji">☀️</div>
-          <div>
-            <span>10℃</span>
-            <span class="low-temp">5℃</span>
-          </div>
-        </div>
-        <div class="future-day">
-          <div class="day-name">Tuesday</div>
-          <div class="emoji">🌧</div>
-          <div>
-            <span>10℃</span>
-            <span class="low-temp">5℃</span>
-          </div>
-        </div>
-        <div class="future-day">
-          <div class="day-name">Wednesday</div>
-          <div class="emoji">🌤</div>
-          <div>
-            <span>10℃</span>
-            <span class="low-temp">5℃</span>
-          </div>
-        </div>
-        <div class="future-day">
-          <div class="day-name">Thursday</div>
-          <div class="emoji">⛈</div>
-          <div>
-            <span>10℃</span>
-            <span class="low-temp">5℃</span>
-          </div>
-        </div>
-        <div class="future-day">
-          <div class="day-name">Friday</div>
-          <div class="emoji">❄️</div>
-          <div>
-            <span>10℃</span>
-            <span class="low-temp">5℃</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="sign">
-      <a href="https://github.com/Haimrich9/My-Awsome-App">Open-source code</a>
-      by Henriette Egeberg Kristensen
-    </div>
-    <script src="src/app.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="src/main.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet" />
+		<!-- CSS only -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+			crossorigin="anonymous"
+		/>
+		<script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+	</head>
+	<body>
+		<div class="main">
+			<div class="input-group mb-3 search-bar">
+				<input type="search" class="form-control" name="" id="inputCity" placeholder="Enter City" />
+				<button class="btn btn-outline-secondary search-bar-button" type="button" id="button-addon2">Search</button>
+			</div>
+			<div class="current">
+				<div>
+					<h1>Oslo</h1>
+					<img alt="icon" class="emoji" id="icon" src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-night.png" />
+					<span>
+						<span id="description"></span>
+						<span class="temp"></span>
+						<span class="temp-symbol">℃ | ℉</span>
+					</span>
+					<div>
+						<span class="pre" id="humidity">Humidity: %</span>
+						<span class="wind" id="wind-speed">Wind: km/h</span>
+					</div>
+				</div>
+				<div class="current-time-style">
+					<button class="temp-convert-btn">Convert</button>
+					<div class="current-time"></div>
+				</div>
+			</div>
+			<div class="future">
+				<div class="future-day">
+					<div class="day-name">Monday</div>
+					<div class="emoji">☀️</div>
+					<div>
+						<span>10℃</span>
+						<span class="low-temp">5℃</span>
+					</div>
+				</div>
+				<div class="future-day">
+					<div class="day-name">Tuesday</div>
+					<div class="emoji">🌧</div>
+					<div>
+						<span>10℃</span>
+						<span class="low-temp">5℃</span>
+					</div>
+				</div>
+				<div class="future-day">
+					<div class="day-name">Wednesday</div>
+					<div class="emoji">🌤</div>
+					<div>
+						<span>10℃</span>
+						<span class="low-temp">5℃</span>
+					</div>
+				</div>
+				<div class="future-day">
+					<div class="day-name">Thursday</div>
+					<div class="emoji">⛈</div>
+					<div>
+						<span>10℃</span>
+						<span class="low-temp">5℃</span>
+					</div>
+				</div>
+				<div class="future-day">
+					<div class="day-name">Friday</div>
+					<div class="emoji">❄️</div>
+					<div>
+						<span>10℃</span>
+						<span class="low-temp">5℃</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="sign">
+			<a href="https://github.com/Haimrich9/My-Awsome-App">Open-source code</a>
+			by Henriette Egeberg Kristensen
+		</div>
+		<script src="src/app.js"></script>
+	</body>
 </html>
