--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 					</div>
 				</div>
 				<div class="current-time-style">
-					<button class="temp-convert-btn">Convert</button>
 					<div class="current-time"></div>
 				</div>
 			</div>
@@ -87,8 +86,9 @@
 			</div>
 		</div>
 		<div class="sign">
-			<a href="https://github.com/Haimrich9/My-Awsome-App">Open-source code</a>
-			by Henriette Egeberg Kristensen
+			This Project was coded by Henriette Egeberg Kristensen and is
+			<a href="https://github.com/Haimrich9/My-Awsome-App">Open-sourced on GitHub</a>
+			and <a href="https://netlify.com">hosted on Netlify</a>
 		</div>
 		<script src="src/app.js"></script>
 	</body>
